# gk_opengl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-tidy.yaml  cppcheck.yaml  cxx_linter.yaml  linux_tests.yaml
scripts/: build_and_run_unit_tests.bash  check_clang_format.bash  generate_compile_db.bash  run_clang_tidy.bash  run_cppcheck.bash  setup_dev_env.bash
scripts/git-hooks/: pre-commit  setup-hooks.bash
src/: CMakeLists.txt  lib_main.cpp  main.cpp
src/includes/: Camera.h  CameraManager.h  Constants.h  ImguiMenu.cpp  ImguiMenu.h  InternalModel.h  LightSource.h  Model.h  Renderer.h  Shader.h  SkyBox.h  WindowManager.h
src/includes/Cameras/: Camera.h  CameraCircular.h  CameraConstant.h  CameraFPS.h  CameraFactory.h
src/includes/Lights/: LightSource.h  SpotLight.h
src/includes/Models/: Flashlight.cpp  Flashlight.h  Mesh.cpp  Mesh.h  Model.h
src/includes/Perspectives/: OrthogonalProjection.h  PerspectiveProjection.h  Projection.h  ProjectionFactory.h  ProjectionManager.h
src/includes/Skybox/: SkyBox.h  SkyBoxManager.h
src/shaders/: gbuffer_fragment_shader.glsl  gbuffer_vertex_shader.glsl  lightning_fragment_shader.glsl  lightning_pass_fragment_shader.glsl  lightning_vertex_shader.glsl  model_fragment_shader.glsl  model_vertex_shader.glsl
src/source/: Camera.cpp  CameraCircular.cpp  CameraConstant.cpp  CameraFPS.cpp  CameraManager.cpp  Flashlight.cpp  ImguiMenu.cpp  Mesh.cpp  Model.cpp  ProjectionManager.cpp  Renderer.cpp  Shader.cpp  SkyBox.cpp  WindowManager.cpp  stb_image_loader.cpp
tests/: CMakeLists.txt  example.cpp
